--- a/src/GSvar/ExpressionGeneWidget.ui
+++ b/src/GSvar/ExpressionGeneWidget.ui
@@ -96,7 +96,7 @@
        <property name="maximumSize">
         <size>
          <width>300</width>
-         <height>220</height>
+         <height>300</height>
         </size>
        </property>
        <property name="title">
@@ -105,6 +105,12 @@
        <layout class="QVBoxLayout" name="verticalLayout_6">
         <item>
          <widget class="QGroupBox" name="groupBox_3">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="title">
            <string>Cohort determination</string>
           </property>
@@ -145,8 +151,83 @@
              </property>
             </widget>
            </item>
+           <item>
+            <widget class="QRadioButton" name="rb_custom">
+             <property name="text">
+              <string>custom cohort</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_4">
+             <item>
+              <spacer name="horizontalSpacer_2">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item>
+              <widget class="QPushButton" name="b_set_custom_cohort">
+               <property name="text">
+                <string>set custom cohort</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
           </layout>
          </widget>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_5">
+          <item>
+           <widget class="QLabel" name="label_2">
+            <property name="text">
+             <string>Quality filter:</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QComboBox" name="cb_sample_quality">
+            <property name="minimumSize">
+             <size>
+              <width>200</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="currentText">
+             <string>Remove samples with quality 'bad'</string>
+            </property>
+            <item>
+             <property name="text">
+              <string>Select all samples</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Remove samples with quality 'bad'</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Select samples with quality 'good' and 'medium'</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Select samples with quality 'good'</string>
+             </property>
+            </item>
+           </widget>
+          </item>
+         </layout>
         </item>
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_3">
